[gd_scene load_steps=7 format=3 uid="uid://bkfkfeisc6tqw"]

[ext_resource type="Texture2D" uid="uid://b165a8ntmwbye" path="res://Assets/bullet.png" id="1_kkven"]
[ext_resource type="Script" uid="uid://boeexxss012jh" path="res://Attacks/player_bullet.gd" id="1_mlfih"]
[ext_resource type="Texture2D" uid="uid://cfxp72w7lt41o" path="res://Assets/ring.png" id="3_f66kk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mlfih"]
size = Vector2(46, 30)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_2swj2"]
particle_flag_align_y = true
particle_flag_disable_z = true
direction = Vector3(-1, 0, 0)
spread = 0.0
initial_velocity_min = 100.0
initial_velocity_max = 200.0
gravity = Vector3(0, 0, 0)
color = Color(1, 1, 1, 0.3529412)

[sub_resource type="CircleShape2D" id="CircleShape2D_f66kk"]
radius = 254.0

[node name="PlayerBullet" type="Area2D"]
collision_layer = 0
collision_mask = 5
script = ExtResource("1_mlfih")
damage = 5.0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_kkven")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-9, 0)
shape = SubResource("RectangleShape2D_mlfih")

[node name="PlayerBulletParticles" type="GPUParticles2D" parent="."]
position = Vector2(-11, 0)
amount = 4
texture = ExtResource("3_f66kk")
lifetime = 0.1
process_material = SubResource("ParticleProcessMaterial_2swj2")

[node name="BounceEnemySearchArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="BounceEnemySearchArea"]
shape = SubResource("CircleShape2D_f66kk")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="BounceEnemySearchArea" to="." method="_on_bounce_enemy_search_area_body_entered"]
[connection signal="body_exited" from="BounceEnemySearchArea" to="." method="_on_bounce_enemy_search_area_body_exited"]
